--- a/background.html
+++ b/background.html
@@ -16,10 +16,10 @@ So there don't seem to be many good resources on the internet to learn about ele
 If you want to learn electronics,
 you will probably have to resort to buying books, and you have to
 make sure you buy the right books, and many of them are crap. Despite this I still think electronics is a relatively approachable subject. 
-This is my attempt to write a better guide on the core of electronics. 
+This is my attempt to write a better guide on the core of electronics. No promises that it is good or even correct. 
 </p>
 
-<b>What is electronics</b> 
+<b>What is electronics?</b> 
 <p>
 I like the definition given on the electronics wikipedia article. So you can go and read that.
 But basically, electronics is any application of electricity that involves active devices.
@@ -46,3 +46,8 @@ is in the first section. If you already know calculus you can skip this.
 <li><a href="bjt.html">Bipolar Junction Transistor</a></li>
 <li><a href="mosfet.html">MOSFETs</a></li>
 </ol>
+
+<b> Credit </b>
+<p>
+Plots are created using Matplotlib and Numpy Python libraries. Schematics are drawn using KiCad.
+</p>
