--- a/capacitors.html
+++ b/capacitors.html
@@ -42,7 +42,7 @@ As we can see, the current through a capacitor is equal to the derivative of the
 across it multiplied by its capacitance. The most basic example of this is a ramping voltage
 across a capacitor. If the ramp is linear, then there will be a constant current through the
 capacitor. Likewise, a constant current into a capacitor will lead to a constantly
-ramping voltage.  
+ramping voltage across it.  
 </p>
 <b> Capacitors in Parallel and Series </b>
 <p>
