--- a/diodes.html
+++ b/diodes.html
@@ -25,19 +25,27 @@ a voltage across a component while also measuring the current through it. Then t
 voltage is plotted on the X axis and the current is plotted on the Y axis. The IV
 curve for a resistor is linear: 
 </p>
+<img src="./pictures/resistor-IV.png"></img>
+<br>
 <b> Diode IV Curve </b>
 <p>
-Here is an IV curve for a 1N4148 diode that I took with my crappy homebrew curve
+Here is an IV curve for a 1N4001 diode that I took with my crappy homebrew curve
 tracer:
 </p>
+<img src="./pictures/1N4001-IV.png"></img>
+<br>
 <p>
-As can be observed, the no current flows through diode until the voltage is ~0.7V in
+As can be observed, no current flows through diode until the voltage is ~0.7V on
 the positive axis. A diode is in some sense a one way conductor. Current will only 
 flow in one direction through it. Additionally, a diode also has a forward voltage;
 if the voltage across the diode does not exceed the forward voltage then current will not 
 flow even in the diodes forward direction. As can be obvserved from the curve trace, 
-this forward voltage is only an approximation, and really the current through a diode is a 
+this forward voltage is only an approximation. Really, the current through a diode is a 
 steep exponential function of the voltage across it.
 </p>
+<b> Current Limited LED Circuit </b>
+<br>
+<img src="./pictures/diode-circuit.png"></img>
+<br>
 <a href="./inductors.html">Back</a>
 <a href="./bjt.html">Next</a>
