--- a/magnetics.html
+++ b/magnetics.html
@@ -14,16 +14,18 @@
 So we know that charge has a polarity, like charges repel and unlike charges attract. 
 It has not been mentioned yet, but this idea can be abstracted slightly with the concept 
 of an electric field. Basically, if we know some space is not electrically neutral, that is
-there are some locked charges nearby. We can come up with an equation that takes in a point in 
-space and a charge that may be placed at that point in space and outputs the magnitude and 
+there are some charges nearby. We can come up with a function that takes in a point in 
+space, and a charge that may be placed at that point in space, and outputs the magnitude and 
 direction of the force that this charge would experience. This is basically what an electric field 
-is, a way to quantify possible electric interactions in an area without actually knowing anything 
-about actual charges. 
+is, a way to quantify possible electric interactions without dealing with individual charges.
+
 However, the electric force is not the only way that charges can interact with each other. Moving 
-charges can also interact through the magnetic force. And, likewise with how there is an electric
-field with an electric force, there is a magnetic field with a magnetic force. The only difference, 
+charges can also interact through the magnetic force. And, like there is an electric
+field with an electric force, there is a magnetic field for the magnetic force. The only difference, 
 is that for a magnetic field, the charges speed and direction of motion must also be taken into
-account.
+account. As the magnetic force is an interaction between moving charges. The magnetic field is 
+often represented visually by drawing magnetic field lines. Also, if this magnetic field summed within an area area, it 
+is called magnetic flux (φ). 
 </p>
 <a href="./RC.html">Back</a>
 <a href="./inductors.html">Next</a>
