--- a/mathematics.html
+++ b/mathematics.html
@@ -10,11 +10,6 @@
 </style>
 </head>
 <h2> Mathematics </h2>
-<b> What is Mathematics </b>
-<p>
-In this section only the useful stuff in mathematics is explained. How to solve calculus equations 
-is not explained. Generally, 
-</p>
 <b> Calculus </b>
 <p>
 There are two useful ideas from calculus that are used in electronics, derivatives
@@ -37,16 +32,17 @@ exp(x) is also exp(x). This apparently makes it magical.
 <p>
  The third function is a sinusoid (sin(x) and cos(x)). The derivative of a sinusoid is also a sinusoid, but phase shifted
 90 degrees. The maximum rate of change of a sinusoid occurs at the zero crossing so this 
-is where the maximum of the derivative will be. The minimum rate of change occurs at the peak. 
-Likewise this will be the minimum of the derivative. This will lead to a 90 degree phase 
+is where the maximum of its derivative will be. The minimum rate of change occurs at the peak. 
+Likewise this is where the minimum of its derivative will be. This will lead to a 90 degree phase 
 shift between the sinusoid and its derivative. 
 </p>
 <img src='./pictures/sinusoid-derivative.png'></img><br>
 <b> Integral </b>
 <p>
-An integral is the signed area under a function within some bounds (technically a definite integral). An integral of a constant is the area of a rectangle. Also for a constant function, If you take one of the bounds and
+An integral is the signed area under a function within some bounds (technically a definite integral). An integral of a constant is the area of a rectangle. Also for a constant function, 
+If you take one of the bounds and
 move it, then plot the integral at each x as a function you will get a linear function.
-The integral of a sine wave with bounds that extend though many periods is zero. The negative
+The integral of a sinusoid with bounds that extends though many periods is zero. The negative
 area is equal to the positive area.  
 </p>
 <img src="./pictures/constant-integral.png"></img>
