--- a/capacitors.html
+++ b/capacitors.html
@@ -24,7 +24,7 @@ much as possible until one of the plates is positively charged and one of the
 plates is negatively charged. This happens nearly instantly while the 
 voltage source is being connected. Once this connection is complete, the circuit is in steady state, no charge moves, and no current
 flows. 
-<p/>
+</p>
 The equation for a capacitor in this steady state is shown below. <br>
 Q = CV <br>
 (Note: Q is technically the absolute value of the charge)
@@ -33,7 +33,7 @@ capacitor. Either a higher value of capacitance, that is more room for charge. O
 higher voltage, that is more force pushing the charge onto the plates. 
 As already mentioned, when the voltage across a capacitor is constant, there won't be
 any current through it, so it won't be doing anything. A capacitor in steady state is basically 
-an open circuit. To find out the transient 
+an open circuit. To find out the transient equation
 behavior of a capacitor we can differentiate the equation above with respect to time.
 The derivative of charge with respect to time is current, and the capacitance stays 
 constant. This yields the following equation: <br>
@@ -41,7 +41,7 @@ I = C(dV/dt) <br>
 As we can see, the current through a capacitor is equal to the derivative of the voltage
 across it multiplied by its capacitance. The most basic example of this is a ramping voltage
 across a capacitor. If the ramp is linear, then there will be a constant current through the
-capacitor. Likewise, a constant current into a capacitor will lead to a constantly
+capacitor. Likewise, a constant current into a capacitor will lead to a linearly
 ramping voltage across it.  
 </p>
 <b> Capacitors in Parallel and Series </b>
