license and readme

--- a/inductors.html
+++ b/inductors.html
@@ -17,7 +17,7 @@ of Ampere's law. A magnetic field can be visualized using field lines. Alternati
 ways to think about it using vector fields. If we have a changing magnetic field passing through a loop (changing magnetic flux), 
 then we will induce a voltage across our loop. This is a result of Faradays law. Putting a changing current through a loop of wire will result in 
 a changing magnetic field through the loop of wire, and this changing magnetic field will induce a voltage. If we want to amplify this effect, we can simply create more than
-one loop. All this boils down to a voltage accross our loop
+one loop. All this boils down to a voltage across our loop
 that is proportional to the rate of change of current through it and the number of loops of wire. This idea is also stated in the inductor equation like so: <br>
 V = L(dI/dt)<br>
 L is the inductance which quantifies how much linked magnetic flux (magnetic field passing through multiple loops) is generated per amp of current.
