--- a/inductors.html
+++ b/inductors.html
@@ -11,7 +11,7 @@
 </head>
 <h2> Inductors </h2>
 <p>
-So far we have not talked about how magnetic interaction in circuits at all despite it being very important. Any
+So far we have not talked about how magnetic interaction in circuits at all despite there importance. Any
 time we have a current flow in a wire we are going to get a magnetic field that wraps around it. This is a result 
 of Ampere's law. A magnetic field can be visualized using field lines. Alternatively, there are more mathematical
 ways to think about it using vector fields. If we have a changing magnetic field passing through a loop (changing magnetic flux), 
