--- a/resistor-circuits.html
+++ b/resistor-circuits.html
@@ -141,9 +141,9 @@ Rx is the resistor value of one of the resistors. Additionally, we know that the
 be the sum of all the individual resistor currents. Again, think of current as a flow, the 
 flow must leave the voltage source, split into three paths, then converge again. And the
 magnitude of the converged flow must be equal to the magnitude of the original flow. Let's put
-this into equation form to figure out how to reduce the parallel resistors. That is, the resistor
+this into equation form to figure out how to reduce the parallel resistors. That is, find the resistor value
 that sets the same current as all the parallel resistors would. <br>
-Vs/R1 + Vs/R2 + Vs/R3 = Vs/Req = Isum <br>
+Vs/R1 + Vs/R2 + Vs/R3 = Vs/Req<br>
 1/R1 + 1/R2 + 1/R3 = 1/Req <br>
 Req = 1/(1/R1 + 1/R2 + 1/R3) <br>
 We see that the reciprocal of the parallel resistance is equal to the sum of the reciprocals of 
