--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 So there don't seem to be many good resources on the internet to learn about electronics. 
 If you want to learn electronics,
 you will probably have to resort to buying books, and you have to
-make sure you buy the right books, and many of them are crap. Despite this I still think electronics is a relatively approachable subject. 
+make sure you buy the right books. Despite this I still think electronics is a relatively approachable subject. 
 This is my attempt to write a better guide on the core of electronics. No promises that it is good or even correct. 
 </p>
 
