--- a/mathematics.html
+++ b/mathematics.html
@@ -47,5 +47,5 @@ area is equal to the positive area.
 </p>
 <img src="./pictures/constant-integral.png"></img>
 <p></p>
-<a href="./induex.html">Back</a>
+<a href="./index.html">Back</a>
 <a href="./electricity.html">Next</a>
