--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     }
 </style>
 </head>
-<h1> Root Electronics </h1>
+<h1> Base Electronics </h1>
 <b>What is this?</b>
 <p>
 So there don't seem to be many good resources on the internet to learn about electronics. 
