--- a/electricity.html
+++ b/electricity.html
@@ -4,7 +4,7 @@
 <title>Electricity</title>
 <style>
     body {
-        font-family:FreeMono;
+        font-family:'Times New Roman', Times, serif;
         font-size: 20;
     }
 </style>
