--- a/RC.html
+++ b/RC.html
@@ -18,8 +18,8 @@ Let's consider an RC circuit. The most basic RC circuit is a capacitor in parall
 <p> The capacitor must
 start with some charge/[voltage across it], otherwise the circuit won't do anything. So what happens with this circuit when
 time starts running? There is a voltage across the capacitor, so there is also a voltage across the resistor. This means
-that there must be a current through the resistor and also through the capacitor. Sense there is a current through the 
-capacitor, there must also be a changing voltage across it. Sense the current is leaving the capacitor, the changing voltage 
+that there must be a current through the resistor and also through the capacitor. Since there is a current through the 
+capacitor, there must also be a changing voltage across it. Since the current is leaving the capacitor, the changing voltage 
 across it must be decreasing. But at what rate is this voltage decreasing? Well, we know the initial rate of decrease is 
 going to be proportional to Vi/R. However, as soon as current starts flowing the voltage across the circuit is going to 
 decrease, and in turn, the rate of decrease is going to decrease. So basically, the voltage across the circuit is going to
