--- a/diodes.html
+++ b/diodes.html
@@ -15,8 +15,8 @@
 So we have finally covered passive components. Now we can get into some real
 electronics. For real electronics we need semiconductors. A semiconductor material
 is basically a material that can be manipulated to make a device that changes its conductivity 
-non-linearly. That is the current through it is not linearly proportional to the applied voltage across it. 
-A semiconductor component is an electronic component  that exploits this behavior. 
+non-linearly. That is the current through it is not necessarily linearly proportional to the applied voltage across it. 
+A semiconductor component is an electronic component that exploits this behavior. 
 Here we will only consider the external behavior of these devices. 
 Not the physics of how this is actually done within the device.
 </p>
